favicon link du style.css

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/skeleton.css">
-
+  <link rel="stylesheet" href="./css/style.css">
   <!-- Liaisons du fichier JS si vous faites le bonus
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- TODO -->
 
   <!-- Liaison du Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="shortcut icon" href="./images/favicon.png">
   <!-- TODO -->
 
 </head>
@@ -52,8 +53,7 @@
         <p>Ces règles nous unissent et ont été <strong>inventées</strong> et sont <strong>officieuses</strong> ! Les voici, prenez plaisir à les parcourir !</p>
       </div>
     </div>
-
-
+    
     <br>
     
     <section>
