ajout du bouton, css du fond et header

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </div>
   </header>
 
-
   <!-- Structure principale de la page
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <main class="container">
+    <button class="bouton" type="button">Accès charte</button>
 
     <div class="row">
       <div class="column">
@@ -53,7 +53,7 @@
         <p>Ces règles nous unissent et ont été <strong>inventées</strong> et sont <strong>officieuses</strong> ! Les voici, prenez plaisir à les parcourir !</p>
       </div>
     </div>
-    
+
     <br>
     
     <section>
