ajout vivre ensemble

--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
         l'autre, aller vers les personnes timides et leur laisser la parole dans les travaux de groupe.</li>
     </ul>
 
+    <h2> Vivre ensemble </h2>
+    <ul>
+      <li> Je fais en sorte qu'il n'y ait pas de bruit parasites ( téléphone en silencieux, je ramène mes écouteurs.
+      </li>
+      <li> Je fais attention aux affaires des autres quand ils sont absents. </li>
+      <li> Je reste moi même </li>
+
+    </ul>
+
 
     <br>
 
