--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
           voici, prenez plaisir à les parcourir !</p>
       </div>
     </div>
-
-    <h2>Réussite collective </h2>
-    <ul>
+  <label for="checkBtn">
+    <h2>Réussite Collective <span class="extend">(Cliquez pour étendre)</span> </h2>
+  
+  <input type="checkbox" id="checkBtn">
+    <ul id="listing">
       <li> Si j'ai fini un exercice, j'aide les autres.</li>
       <li> En cas de difficultés, je n'hésite pas à solliciter le groupe , à condition d'avoir suffisamment recherché en
         autonomie, si je demande de l'aide je m'engage à approfondir le sujet par moi même.</li>
@@ -69,6 +71,7 @@
         avec
         l'autre, aller vers les personnes timides et leur laisser la parole dans les travaux de groupe.</li>
     </ul>
+  </label>
 
 
     <br>
