création et mise en forme de Vivre ensemble

--- a/index.html
+++ b/index.html
@@ -72,15 +72,16 @@
         l'autre, aller vers les personnes timides et leur laisser la parole dans les travaux de groupe.</li>
     </ul>
   </label>
-
-    <h2> Vivre ensemble </h2>
-    <ul>
+  <label for="checkBtn2">
+    <h2> Vivre ensemble <span class="extend">(Cliquez pour étendre)</span></h2>
+    <input type="checkbox" id="checkBtn2">
+    <ul id="listing2">
       <li> Je fais en sorte qu'il n'y ait pas de bruit parasites ( téléphone en silencieux, je ramène mes écouteurs.
       </li>
       <li> Je fais attention aux affaires des autres quand ils sont absents. </li>
       <li> Je reste moi même </li>
-
     </ul>
+  </label>
 
 
     <br>
