--- a/index.html
+++ b/index.html
@@ -56,12 +56,8 @@
       </div>
     </div>
 
-  <label for="checkBtn">
-    <h2>Réussite Collective <span class="extend">(Cliquez pour étendre)</span> </h2>
-  
-  <input type="checkbox" id="checkBtn">
-  
-    <ul id="listing">
+    <h2>Réussite collective </h2>
+    <ul>
       <li> Si j'ai fini un exercice, j'aide les autres.</li>
       <li> En cas de difficultés, je n'hésite pas à solliciter le groupe , à condition d'avoir suffisamment recherché en
         autonomie, si je demande de l'aide je m'engage à approfondir le sujet par moi même.</li>
@@ -73,17 +69,28 @@
         avec
         l'autre, aller vers les personnes timides et leur laisser la parole dans les travaux de groupe.</li>
     </ul>
-  </label>
-  <label for="checkBtn2">
-    <h2> Vivre ensemble <span class="extend">(Cliquez pour étendre)</span></h2>
-    <input type="checkbox" id="checkBtn2">
-    <ul id="listing2">
+
+    <h2> Vivre ensemble </h2>
+    <ul>
       <li> Je fais en sorte qu'il n'y ait pas de bruit parasites ( téléphone en silencieux, je ramène mes écouteurs.
       </li>
       <li> Je fais attention aux affaires des autres quand ils sont absents. </li>
       <li> Je reste moi même </li>
+
     </ul>
-  </label>
+
+    <h2> Spécial Covid <span class="extend"></span></h2>
+    <ul>
+      <li> Respecter les gestes barrières. </li>
+      <li> Se laver régulièrement les mains. </li>
+      <li> Tousser et éternuer dans son coude. </li>
+      <li> Aérer la pièce de vie. </li>
+
+    </ul>
+
+    <h2> Pour le Fun <span class="extend"></span></h2>
+    <li> Amener le petit déjeuner chacun notre tour pour le groupe </li>
+    <li> Organiser des after works </li>
 
 
     <br>
