--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Les bases d'une page HTML
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Le titre de votre paga </title>
+  <title> Charte de groupe </title>
   <meta name="description" content="Notre Charte de Promo">
   <meta name="author" content="Promo DWWM - Up To Dev 2022 ">
 
@@ -46,7 +46,6 @@
   <!-- Structure principale de la page
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <main class="container">
-    <button class="bouton" type="button">Accès charte</button>
 
     <div class="row">
       <div class="column">
@@ -56,47 +55,57 @@
       </div>
     </div>
 
-  <label for="checkBtn">
-    <h2>Réussite Collective <span class="extend">(Cliquez pour étendre)</span> </h2>
-  
-  <input type="checkbox" id="checkBtn">
-  
-    <ul id="listing">
-      <li> Si j'ai fini un exercice, j'aide les autres.</li>
-      <li> En cas de difficultés, je n'hésite pas à solliciter le groupe , à condition d'avoir suffisamment recherché en
-        autonomie, si je demande de l'aide je m'engage à approfondir le sujet par moi même.</li>
-      <li> Je pratique la critique positive, je donne des pistes d'amélioration / une argumentation et je reste
-        bienveillant.</li>
-      <li> Je partage mes sources, bonnes pratiques, trucs et astuces </li>
-      <li> Je reste positif et j'en parle aux autres en cas de soucis </li>
-      <li> Ne pas toujours faire des groupes d'affinité, et faire des efforts même si on ne s'entend pas plus que ça
-        avec
-        l'autre, aller vers les personnes timides et leur laisser la parole dans les travaux de groupe.</li>
-    </ul>
-  </label>
-  <label for="checkBtn2">
-    <h2> Vivre ensemble <span class="extend">(Cliquez pour étendre)</span></h2>
-    <input type="checkbox" id="checkBtn2">
-    <ul id="listing2">
-      <li> Je fais en sorte qu'il n'y ait pas de bruit parasites ( téléphone en silencieux, je ramène mes écouteurs.
-      </li>
-      <li> Je fais attention aux affaires des autres quand ils sont absents. </li>
-      <li> Je reste moi même </li>
-    </ul>
-  </label>
+    <button class="bouton" type="button">Accès charte</button>
 
-  <h2> Spécial Covid <span class="extend"></span></h2>
-  <ul>
-    <li> Respecter les gestes barrières. </li>
-    <li> Se laver régulièrement les mains. </li>
-    <li> Tousser et éternuer dans son coude. </li>
-    <li> Aérer la pièce de vie. </li>
+    <label for="checkBtn">
+      <h2>Réussite Collective <span class="extend">(Cliquez pour étendre)</span> </h2>
+      <input type="checkbox" id="checkBtn">
+      <ul id="listing">
+        <li> Si j'ai fini un exercice, j'aide les autres.</li>
+        <li> En cas de difficultés, je n'hésite pas à solliciter le groupe , à condition d'avoir suffisamment recherché
+          en
+          autonomie, si je demande de l'aide je m'engage à approfondir le sujet par moi même.</li>
+        <li> Je pratique la critique positive, je donne des pistes d'amélioration / une argumentation et je reste
+          bienveillant.</li>
+        <li> Je partage mes sources, bonnes pratiques, trucs et astuces </li>
+        <li> Je reste positif et j'en parle aux autres en cas de soucis </li>
+        <li> Ne pas toujours faire des groupes d'affinité, et faire des efforts même si on ne s'entend pas plus que ça
+          avec
+          l'autre, aller vers les personnes timides et leur laisser la parole dans les travaux de groupe.</li>
+      </ul>
+    </label>
 
-  </ul>
+    <label for="checkBtn2">
+      <h2> Vivre ensemble <span class="extend">(Cliquez pour étendre)</span></h2>
+      <input type="checkbox" id="checkBtn2">
+      <ul id="listing2">
+        <li> Je fais en sorte qu'il n'y ait pas de bruit parasites ( téléphone en silencieux, je ramène mes écouteurs.
+        </li>
+        <li> Je fais attention aux affaires des autres quand ils sont absents. </li>
+        <li> Je reste moi même </li>
+      </ul>
+    </label>
 
-  <h2> Pour le Fun <span class="extend"></span></h2>
-  <li> Amener le petit déjeuner chacun notre tour pour le groupe </li>
-  <li> Organiser des after works </li>
+    <label for="checkBtn3">
+      <h2> Spécial Covid <span class="extend">(Cliquez pour étendre)</span></h2>
+      <input type="checkbox" id="checkBtn3">
+      <ul id="listing3">
+        <li> Respecter les gestes barrières. </li>
+        <li> Se laver régulièrement les mains. </li>
+        <li> Tousser et éternuer dans son coude. </li>
+        <li> Aérer la pièce de vie. </li>
+      </ul>
+    </label>
+
+    <label for="checkBtn4">
+      <h2> Pour le Fun <span class="extend">(Cliquez pour étendre)</span></h2>
+      <input type="checkbox" id="checkBtn4">
+      <ul id="listing4">
+        <li> Amener le petit déjeuner chacun notre tour pour le groupe </li>
+        <li> Organiser des after works </li>
+      </ul>
+    </label>
+    
     <br>
 
     <section>
