flexbox sur l'entete

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
   <!-- Structure principale de la page
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <main class="contain">
-
+<div class="top">
     <div class="intro">
       <h3>Ceci est notre charte de promo</h3>
       <p>Ces règles nous unissent et ont été (longuement 😅) <strong>débattues</strong> et sont <strong>votées</strong> 
         pour pouvoir selectionner celles qui nous correspondent et nous unissent.<br> Les
         voici, prenez plaisir à les parcourir !</p>
     </div>
-      <div class="charte">
+    <div class="charte">
       <button class="bouton" type="button">Accès charte</button>
-      </div>
     </div>
+</div>
       
     <div class="article1">
       <label for="checkBtn">
